@@ -1,4 +1,9 @@
 
+2018-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (field_accept): fixed bug #498 and ignore
+	  COB_INSERT_MODE for fields with size 1
+
 2018-03-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.c, common.h: fixed bug #500 CBL_READ_KBD_CHAR not
